--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Проект для Git-репозитория</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
-    <h1>Первое изменение</h1>
+    <header class="header">
+        <h1>Шапка проекта</h1>
+    </header>
+
 </body>
 
 </html>
