Добавлен основной контент

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Проект для Git-репозитория</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
     <h1>Первое изменение</h1>
 </body>
+<main class="main">
+    <h1>Основной контент</h1>
+</main>
 
 </html>
